# BLIP

./: .gitignore  Img2Txt_LOOP.py  Txt2Img_LOOP.py  pyproject.toml  tokenizers-0.10.3-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl
